--- a/micro-time-delay.tex
+++ b/micro-time-delay.tex
@@ -6,6 +6,6 @@
 
 \end{knitrout}
 
-    \caption{The distribution of the error of \name's measurements across a range of network conditions. The vast majority of \name's estimates are within a small fraction of the actual value. The dashed lines show the 10th, 50th, and 90th percentile, and the edges of the plot contain the 1st and 99th percentiles.}
+    \caption{\name's estimate of the delay }
     \label{fig:micro:time-delay}
 \end{figure}
