--- a/micro-time-thru.tex
+++ b/micro-time-thru.tex
@@ -6,6 +6,6 @@
 
 \end{knitrout}
 
-    \caption{A representative example of the difference between \name's estimates and the actual values over a five second snapshot from one of the experiments in our evaluation. \name's estimates closely track the actual values over time, showing \name's ability to quickly observe changing network conditions.}
+    \caption{\name's estimate of the receive rate.}
     \label{fig:micro:time-thru}
 \end{figure}
