--- a/graphs/fifo-not-enough.Rnw
+++ b/graphs/fifo-not-enough.Rnw
@@ -6,7 +6,7 @@ library(showtext)
 library(patchwork)
 font_add_google("Lato")
 showtext_auto()
-df <- read.csv("84Mbps-1bk-caidacdf.data", sep=" ")
+df <- read.csv("data/84Mbps-1bk-caidacdf.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 bw <- 12e6
 df$ofct <- (df$Size / bw) + 0.05
