--- a/graphs/micro-time-delay.Rnw
+++ b/graphs/micro-time-delay.Rnw
@@ -8,7 +8,7 @@ library(showtext)
 font_add_google("Lato")
 showtext_auto()
 
-data <- read.csv("minrtt-50-delay-dist.data", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric", "numeric", "numeric", "numeric"))
+data <- read.csv("data/minrtt-50-delay-dist.data", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric", "numeric", "numeric", "numeric"))
 colnames(data) <- c("t", "mm_delay", "inbox_delay", "diff_delay", "mm_thru", "inbox_thru", "diff_thru")
 
 data$mm_delay <- data$mm_delay + 50
@@ -30,7 +30,7 @@ p1 <- ggplot() +
     coord_cartesian(xlim=c(20,30), ylim=c(0,84)) + 
     theme(text = element_text(size=17))
 
-data <- read.csv("minrtt-delay-dist.data", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric","numeric","numeric","numeric"))
+data <- read.csv("data/minrtt-delay-dist.data", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric","numeric","numeric","numeric"))
 colnames(data) <- c("t", "mm_delay", "inbox_delay", "diff_delay", "mm_thru", "inbox_thru", "diff_thru")
 
 # Adjust for mahimahi delay overhead
