--- a/graphs/waterfall.Rnw
+++ b/graphs/waterfall.Rnw
@@ -5,7 +5,7 @@ library(ggplot2)
 library(showtext)
 font_add_google("Lato")
 showtext_auto()
-df <- read.csv("waterfall.data", sep=" ")
+df <- read.csv("data/waterfall.data", sep=" ")
 
 facet_labels <- c("copa_sfq" = "Bundler", "nobundler" = "Status Quo")
 
