--- a/ref.bib
+++ b/ref.bib
@@ -601,6 +601,13 @@ howpublished={\url{https://www.isi.edu/nsnam/ns/}},
   year = {2015},
 }
 
+@inproceedings{trotsky,
+  author = {{McCauley, James and Harchol, Yotam and Panda, Aurojit and Raghavan, Barath and Shenker, Scott}},
+  title = {{Enabling a Permanent Revolution in Internet Architecture}},
+  booktitle = {SIGCOMM},
+  year = {2019},
+}
+
 @misc{caida-dataset,
 howpublished={\url{http://www.caida.org/data/passive/passive_2016_dataset.xml}},
 author={CAIDA},
@@ -1502,6 +1509,13 @@ author = {{Chelsio Communications}},
   volume={1},
   pages={15--15},
   year={2001}
+}
+
+@inproceedings{ip-traceback,
+  title={{Practical Network Support for IP Traceback}},
+  author={{Savage, Stefan and Wetherall, David and Karlin, Anna and Anderson, Tom}},
+  booktitle={SIGCOMM},
+  year={2000},
 }
 
 @inproceedings{hotcocoa,
