update throttling reference

--- a/intro.tex
+++ b/intro.tex
@@ -21,9 +21,14 @@
 The vast literature on scheduling and queue management policies~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} has demonstrated their benefits.
 On many Internet paths, however, content providers and end users have been unable to enjoy these benefits.
 
-Internet content providers may desire such policies for their traffic. For example, a video streaming company might benefit from weighted fair queueing across its video traffic to its many different users sharing a bottleneck, and web sites might want to prioritize  interactive web traffic (e.g., e-commerce) over the bulk file transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual content providers~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}. Content providers are therefore unable to apply desired policies to their traffic in such settings. 
+Internet content providers may desire such policies for their traffic. For example, a video streaming company might benefit from weighted fair queueing across its video traffic to its many different users sharing a bottleneck, and web sites might want to prioritize  interactive web traffic (e.g., e-commerce) over the bulk file transfers. 
+However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual content 
+providers~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}. 
+Content providers are therefore unable to apply desired policies to their traffic in such settings. 
 
-ISPs, on the other hand, do control the bottleneck links in their carrier networks to enforce different scheduling and queue management policies. However, they neither have enough visibility into their customers' traffic to choose desired policies, nor enough incentives to enforce them.\footnote{The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}. Our focus is public networks.} Large customers might be able to negotiate deals with certain carriers to enforce specific policies~\cite{att-qos}. However, it might not be possible to negotiate such deals with \emph{all} carriers in the traffic's path, and content providers may wish to keep their policies confidential from downstream ISPs.
+ISPs, on the other hand, do control the bottleneck links in their carrier networks to enforce different scheduling and queue management policies. 
+However, they neither have enough visibility into their customers' traffic to choose desired policies, nor enough incentives to enforce them.\footnote{The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}. Our focus is public networks.} 
+Large customers might be able to negotiate deals with certain carriers to enforce specific policies~\cite{att-qos}. However, it might not be possible to negotiate such deals with \emph{all} carriers in the traffic's path, and content providers may wish to keep their policies confidential from downstream ISPs.
 %(especially a small last-mile carrier that is likely to be the bottleneck, and that may not even possess switches equipped with required features). 
 %Even if this was somehow made possible, the customers would have no way of knowing whether their policies were enforced as desired, and they would be left at the mercy of these individual ISPs.
 %, they have no way of knowing whether it was done appropriately. 
