--- a/ref.bib
+++ b/ref.bib
@@ -1703,18 +1703,18 @@ year = {2016},
     year = {2010}
 }
 
-@misc{isp-throttle-1,
+@inproceedings{isp-throttle-1,
+    author = {Li, Fangfan and Niaki, Arian Akhavan and Choffnes, David and Gill, Phillipa and Mislove, Alan},
+    title = {{A Large-Scale Analysis of Deployed Traffic Differentiation Practices}},
+    booktitle = {SIGCOMM},
+    year = {2019},
+}
+
+@misc{isp-throttle-2,
     author = {Caroline Craig},
     title = {{ISPs do throttle traffic -- and the FCC can't stop it}},
     howpublished = {\url{https://www.infoworld.com/article/2940538/internet/isps-do-throttle-traffic-and-the-fcc-cant-stop-it.html}},
     year = {2015}
-}
-
-@misc{isp-throttle-2,
-    author = {Paul Lilly},
-    title = {{Research Study Proves ISPs Are Throttling Streaming Services Post Net Neutrality}},
-    howpublished = {\url{https://hothardware.com/news/research-study-isps-throttling-streaming-services-post-net-neutrality}},
-    year = {2018}
 }
 
 @misc{isp-throttle-3,
